[package]
name = "memtuco"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

[dependencies]


[dev-dependencies] # Only for testing
csv = "1.3" # Add this line
rusqlite = { version = "0.30.0", features = ["bundled"] } # Use the latest version
fake = { version = "2.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[workspace]
members = ["client"]